--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>LP-video</title>
     <link rel="stylesheet" href="/src/input.css" />
   </head>
-  <body>
+  <body class="dark:text-base-content">
     <!-- navbar responsive -->
     <div class="navbar bg-base-100">
       <div class="navbar-start">
@@ -232,9 +232,7 @@
     <section class="bg-base-200 body-font hidden md:block">
       <div class="container px-5 py-24 mx-auto">
         <div class="flex flex-col text-center w-full mb-20">
-          <h1
-            class="sm:text-4xl text-3xl font-medium title-font mb-2 text-gray-900"
-          >
+          <h1 class="sm:text-4xl text-3xl font-medium title-font mb-2">
             Обладнання
           </h1>
           <p class="lg:w-2/3 mx-auto leading-relaxed text-base">
@@ -417,7 +415,7 @@
               </svg>
             </div>
             <div class="flex-grow sm:pl-6 mt-6 sm:mt-0">
-              <h2 class="font-medium title-font text-gray-900 mb-1 text-xl">
+              <h2 class="font-medium title-font mb-1 text-xl">
                 Shooting Stars
               </h2>
               <p class="leading-relaxed">
@@ -457,9 +455,7 @@
               </svg>
             </div>
             <div class="flex-grow sm:pl-6 mt-6 sm:mt-0">
-              <h2 class="font-medium title-font text-gray-900 mb-1 text-xl">
-                The Catalyzer
-              </h2>
+              <h2 class="font-medium title-font mb-1 text-xl">The Catalyzer</h2>
               <p class="leading-relaxed">
                 VHS cornhole pop-up, try-hard 8-bit iceland helvetica. Kinfolk
                 bespoke try-hard cliche palo santo offal.
@@ -498,9 +494,7 @@
               </svg>
             </div>
             <div class="flex-grow sm:pl-6 mt-6 sm:mt-0">
-              <h2 class="font-medium title-font text-gray-900 mb-1 text-xl">
-                The 400 Blows
-              </h2>
+              <h2 class="font-medium title-font mb-1 text-xl">The 400 Blows</h2>
               <p class="leading-relaxed">
                 VHS cornhole pop-up, try-hard 8-bit iceland helvetica. Kinfolk
                 bespoke try-hard cliche palo santo offal.
@@ -539,9 +533,7 @@
               </svg>
             </div>
             <div class="flex-grow sm:pl-6 mt-6 sm:mt-0">
-              <h2 class="font-medium title-font text-gray-900 mb-1 text-xl">
-                Neptune
-              </h2>
+              <h2 class="font-medium title-font mb-1 text-xl">Neptune</h2>
               <p class="leading-relaxed">
                 VHS cornhole pop-up, try-hard 8-bit iceland helvetica. Kinfolk
                 bespoke try-hard cliche palo santo offal.
@@ -560,12 +552,12 @@
     <!-- end steps section -->
 
     <!-- Hardware section -->
-    <section class="text-gray-600 body-font bg-base-200">
+    <section class="body-font bg-base-200">
       <div class="container px-5 sm:py-6 md:py-24 mx-auto">
         <div class="flex flex-col">
           <div class="flex flex-wrap sm:flex-row flex-col py-6 mb-12">
             <h1
-              class="sm:w-2/5 text-gray-900 font-medium title-font text-3xl lg:text-5xl mb-2 sm:mb-0"
+              class="sm:w-2/5 font-medium title-font text-3xl lg:text-5xl mb-2 sm:mb-0"
             >
               Обладнання
             </h1>
@@ -586,9 +578,7 @@
                 src="https://dummyimage.com/600x500"
               />
             </div>
-            <h2 class="text-xl font-medium title-font text-gray-900 mt-5">
-              Shooting Stars
-            </h2>
+            <h2 class="text-xl font-medium title-font mt-5">Shooting Stars</h2>
             <p class="text-base leading-relaxed mt-2">
               Swag shoivdigoitch literally meditation subway tile tumblr
               cold-pressed. Gastropub street art beard dreamcatcher neutra,
@@ -617,9 +607,7 @@
                 src="https://dummyimage.com/600x500"
               />
             </div>
-            <h2 class="text-xl font-medium title-font text-gray-900 mt-5">
-              The Catalyzer
-            </h2>
+            <h2 class="text-xl font-medium title-font mt-5">The Catalyzer</h2>
             <p class="text-base leading-relaxed mt-2">
               Swag shoivdigoitch literally meditation subway tile tumblr
               cold-pressed. Gastropub street art beard dreamcatcher neutra,
@@ -648,9 +636,7 @@
                 src="https://dummyimage.com/600x500"
               />
             </div>
-            <h2 class="text-xl font-medium title-font text-gray-900 mt-5">
-              The 400 Blows
-            </h2>
+            <h2 class="text-xl font-medium title-font mt-5">The 400 Blows</h2>
             <p class="text-base leading-relaxed mt-2">
               Swag shoivdigoitch literally meditation subway tile tumblr
               cold-pressed. Gastropub street art beard dreamcatcher neutra,
